adds show-contact div, change display function to display info in show-contact, changed the way delete works, simplified event handlers into one function

--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
         <button type="submit" name="button">Submit</button>
       </form>
 
-      <div class="contactDisplayBox">
-        <span id="landingZone"></span>
+        <ul id="landingZone"></ul>
+
+      <div id="show-contact">
+        <p>First Name: <span class="first-name"></span></p>
+        <p>Last Name: <span class="last-name"></span></p>
+        <p>Address: <span class="address"></span></p>
+        <p>Phone Number: <span class="phone-number"></span></p>
+      <div id="buttons">
       </div>
+
     </div>
   </body>
 </html>
