--- a/index.html
+++ b/index.html
@@ -15,18 +15,36 @@
       </div>
 
       <form id="contactForm">
+        <h4>Contact</h4>
         <label for="contactFirstName">First name: </label>
         <input type="text" id="contactFirstName">
         <br>
         <label for="contactLastName">Last name: </label>
         <input type="text" id="contactLastName">
         <br>
-        <label for="contactAddress">Address: </label>
-        <input type="text" id="contactAddress">
-        <br>
-        <label for="contactNumber">Number: </label>
+        <label for="contactNumber">Phone number: </label>
         <input type="text" id="contactNumber">
         <br>
+        <h4>Address</h4>
+        <label for="contactStreet">Street: </label>
+        <input type="text" id="contactStreet">
+        <br>
+        <label for="contactCity">City: </label>
+        <input type="text" id="contactCity">
+        <br>
+        <label for="contactState">State: </label>
+        <input type="text" id="contactState">
+        <br>
+        <label for="contactZipcode">Zipcode: </label>
+        <input type="text" id="contactZipcode">
+        <br>
+        <label for="contactCountry">Country: </label>
+        <input type="text" id="contactCountry">
+        <br>
+        <label for="contactEmail">Email: </label>
+        <input type="text" id="contactEmail">
+        <br>
+
         <button type="submit" name="button">Submit</button>
       </form>
 
@@ -35,8 +53,9 @@
       <div id="show-contact">
         <p>First Name: <span class="first-name"></span></p>
         <p>Last Name: <span class="last-name"></span></p>
-        <p>Address: <span class="address"></span></p>
         <p>Phone Number: <span class="phone-number"></span></p>
+        <p>Email: <span class="email"></span></p>
+        <p>Address: <span class="address"></span></p>
       <div id="buttons">
       </div>
 
